--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>HOTP Generator</title>
-    <script src="https://cdn.jsdelivr.net/npm/jsotp@latest/dist/jsOTP.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsOTP/1.4.1/jsOTP.min.js"></script>
     <style>
         body { font-family: Arial; max-width: 500px; margin: 0 auto; padding: 20px; }
         input, button { padding: 10px; width: 100%; margin: 10px 0; }
