--- a/index.html
+++ b/index.html
@@ -2,37 +2,68 @@
 <html>
 <head>
     <title>HOTP Generator</title>
+    <!-- Gunakan library dari CDN yang stabil -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsOTP/1.4.1/jsOTP.min.js"></script>
     <style>
-        body { font-family: Arial; max-width: 500px; margin: 0 auto; padding: 20px; }
-        input, button { padding: 10px; width: 100%; margin: 10px 0; }
-        button { background: #4CAF50; color: white; border: none; cursor: pointer; }
-        #result { margin-top: 20px; font-size: 18px; }
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 500px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #f5f5f5;
+        }
+        input, button {
+            padding: 10px;
+            width: 100%;
+            margin: 10px 0;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        #result {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #e9f7ef;
+            border-radius: 4px;
+        }
     </style>
 </head>
 <body>
-    <h1>HOTP Generator</h1>
-    <input type="text" id="secret" placeholder="e.g., IY2TORJVGQ4EMNZWGY4Q" required>
-    <input type="number" id="counter" value="5">
-    <button onclick="generate()">Generate PIN</button>
+    <h1>🔐 HOTP Generator</h1>
+    <input type="text" id="secret" placeholder="Masukkan kunci rahsia (cth: IY2TORJVGQ4EMNZWGY4Q)" required>
+    <input type="number" id="counter" value="5" placeholder="Counter (cth: 5)">
+    <button onclick="generateHOTP()">Jana PIN</button>
     <div id="result"></div>
 
     <script>
-        function generate() {
+        function generateHOTP() {
+            // Dapatkan input pengguna
             const secret = document.getElementById("secret").value.trim().replace(/=/g, '');
             const counter = parseInt(document.getElementById("counter").value);
-            
-            if (!secret) return alert("Kunci diperlukan!");
-            
+
+            // Validasi input
+            if (!secret) {
+                alert("Sila masukkan kunci rahsia!");
+                return;
+            }
+
             try {
+                // Jana PIN
                 const hotp = new jsOTP.hotp();
                 const pin = hotp.getOtp(secret, counter);
+
+                // Tunjukkan hasil
                 document.getElementById("result").innerHTML = `
-                    <strong>PIN: ${pin}</strong><br>
+                    <strong>✅ PIN: ${pin}</strong><br>
                     <small>Kunci: ${secret} | Counter: ${counter}</small>
                 `;
-            } catch (e) {
-                document.getElementById("result").innerHTML = `Error: ${e.message}`;
+            } catch (error) {
+                document.getElementById("result").innerHTML = `❌ Ralat: ${error.message}`;
             }
         }
     </script>
